Added Taxes Added transaction UI

--- a/templates/widgets/addTransaction.html
+++ b/templates/widgets/addTransaction.html
@@ -1,46 +1,44 @@
-<div class="panel panel-default">
+<div class="panel panel-primary">
 
   <div class="panel-heading"> Add transaction </div>
   <div class="panel-body">
     <form class="form-horizontal">
       <div class="form-group">
-        <label class="control-label col-sm-2" for="participant">Participant:</label>
-        <div class="col-sm-10">
+        <label class="control-label col-lg-4" for="participant">Participant:</label>
+        <div class="col-lg-8">
           <input type="text" class="form-control" name="participant" id="participant" placeholder="Name of the other participant">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="amt">Amount</label>
-        <div class="col-sm-10"> 
+        <label class="control-label col-lg-4" for="amt">Amount:</label>
+        <div class="col-lg-8"> 
           <input type="number" class="form-control" name="amount" id="amount" placeholder="Amount transfered">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="note">Note</label>
-        <div class="col-sm-10"> 
+        <label class="control-label col-lg-4" for="note">Note:</label>
+        <div class="col-lg-8"> 
           <input type="number" class="form-control" name="note" id="note" placeholder="Add a note">
         </div>
       </div>
-      <div>
         <div class="form-group">
-          <label class="control-label col-sm-2" for="category">Category</label>
-          <div class="col-sm-4"> 
+          <label class="control-label col-lg-4" for="category">Category:</label>
+          <div class="col-lg-8"> 
             <select class="form-control" name="category" id="category">
-              <option>A</option>
-              <option>B</option>
-              <option>C</option>
-              <option>D</option>
-              <option>E</option>
-              <option>F</option>
+              <option>Food</option>
+              <option>Utilities</option>
+              <option>Entertainment</option>
+              <option>Clothes</option>
+              <option>Clothes</option>
+              <option>Fuel</option>
+              <option>Misc</option>
             </select>
           </div>
-          <label class="control-label col-sm-4" for="income">Incoming:&nbsp;&nbsp;
-            <input type="checkbox" name="income" id="income"> </input>
-
-        </div>
       </div>
+      
+          <label class="control-label" for="income">Incoming: &nbsp;
+            <input type="checkbox" name="income" id="income"/>
+          </label>   
       </div>
     </form>
-</div>
-</div>
 </div>
