--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,11 +38,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span> 
                     </button>
-                    <a class="navbar-brand" href="#">WebSiteName</a>
+                    <a class="navbar-brand" href="/">PFA</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li class="{% if page.name == 'dashboard' %}active{%endif%}"><a href="#">Dashboard</a></li>
+                        <li class="{% if page.name == 'dashboard' %}active{%endif%}"><a href="/dashboard">Dashboard</a></li>
                         <!--<li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Expenses
                                 <span class="caret"></span>
@@ -54,6 +54,7 @@
                             </ul>
                         </li>-->
                         <li class="{% if page.name == 'expenses' %}active{%endif%}"><a href="/expenses">Expenses</a></li>
+                        <li class="{% if page.name == 'taxes' %}active{%endif%}"><a href="/taxes">Taxes</a></li>
                         <li class="{% if page.name == 'debts' %}active{%endif%}"><a href="/debts">Debts</a></li>
                         <li class="{% if page.name == 'stats' %}active{%endif%}"><a href="/stats">Stats</a></li>
                     </ul>
@@ -75,7 +76,8 @@
         </header>
         <!-- Main Body -->
         
-        <div class="container-fluid"> 
+        <div class="container"> 
+            {% block body %}
             <!--Left Sidebar -->
             <div class ="collapse sidebar-collapse" id="sidebarLeft">
             {% block leftbar %}
@@ -126,7 +128,6 @@
                 <!-- Main Body -->
             
                 <div>
-                    {% block body %}   
                     <div class="list-group">
                     
                         <a href="#" class="list-group-item">First item</a>
@@ -134,10 +135,10 @@
                         <a href="#" class="list-group-item">Third item</a>
                     </div>
                      
-                    {% endblock %}
                 </div>
             
             </div>
+          {% endblock %}
         </div>
         
 
