--- a/templates/debts.html
+++ b/templates/debts.html
@@ -3,10 +3,10 @@
 {% block body%}
   <div class="row">
   <div class="col-md-4">
-    {% include 'widgets/addTransaction.html' %}
+    {% include 'widgets/addDebt.html' %}
   </div>
   <div class="col-md-8">
-    {% include 'widgets/transactionView.html' %}
+    {% include 'widgets/debtView.html' %}
   </div>
 </div>
 {% endblock %}
