--- a/templates/widgets/addDebt.html
+++ b/templates/widgets/addDebt.html
@@ -1,8 +1,8 @@
 <div class="panel panel-primary">
 
-  <div class="panel-heading"> Add transaction </div>
+  <div class="panel-heading"> Add Debt </div>
   <div class="panel-body">
-    <form class="form-horizontal" action="/expenses/addexpense" method="POST" >
+    <form class="form-horizontal" action="/debts/adddebt" method="POST" >
       <div class="form-group">
         <label class="control-label col-lg-4" for="participant">Participant:</label>
         <div class="col-lg-8">
@@ -41,6 +41,12 @@
             <input value='true' type="datetime-local" class="form-control" name="timestamp" id="date" placeholder="Date & Time">
         </div>
     </div>      
+    <div class="form-group">
+        <label class="control-label col-lg-4" for="due">Due Date:</label>
+        <div class="col-lg-8"> 
+            <input value='true' type="date" class="form-control" name="duedate" id="due" placeholder="Duedate">
+        </div>
+    </div>
     <div class="form-group">
         <label class="control-label col-lg-12" style="text-align:left" for="income">Incoming: &nbsp;
           <input value="true" type="checkbox" name="income" id="income"/>
