--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,7 +56,7 @@
                         <li class="{% if page.name == 'expenses' %}active{%endif%}"><a href="/expenses">Expenses</a></li>
                         <li class="{% if page.name == 'taxes' %}active{%endif%}"><a href="/taxes">Taxes</a></li>
                         <li class="{% if page.name == 'debts' %}active{%endif%}"><a href="/debts">Debts</a></li>
-                        <li class="{% if page.name == 'stats' %}active{%endif%}"><a href="/stats">Stats</a></li>
+                        <li class="{% if page.name == 'analytics' %}active{%endif%}"><a href="/analytics">Analytics</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
