--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,9 @@
 
     <body>
         <!-- Body -->
-        <div class="container-fluid">
+        <div class="container">
+            <h1>P.F.A</h1>
+            <h3>Personal Finance Assistant</h3>
             <div>
             {% block notice %}
                 {% with messages = get_flashed_messages(with_categories=true) %}
