--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span> 
                     </button>
-                    <a class="navbar-brand" href="/">PFA</a>
+                    <a class="navbar-brand" href="/"><b>P.F.A</b></a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
@@ -66,8 +66,8 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span> 
                         </button>
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> {{session['username']}}</a></li>
+                        <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
                     </ul>
                 </div>
             </div>
@@ -77,6 +77,10 @@
         <!-- Main Body -->
         
         <div class="container"> 
+            <div class="col-md-12">
+              <h1>{{page.title}}</h1>
+              <hr/>
+            </div>
             {% block body %}
             <!--Left Sidebar -->
             <div class ="collapse sidebar-collapse" id="sidebarLeft">
