--- a/templates/widgets/addDebt.html
+++ b/templates/widgets/addDebt.html
@@ -48,9 +48,12 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-lg-12" style="text-align:left" for="income">Incoming: &nbsp;
-          <input value="true" type="checkbox" name="income" id="income"/>
-        </label>    
+        <label class="control-label col-lg-4" for="income">
+            Incoming:
+        </label>
+        <div class="col-lg-8">
+            <input value="true" type="checkbox" name="income" id="income"/>
+        </div>
     </div>
     <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">
